--- a/app/Resources/views/desktop/courses/course_mobile_game.html.twig
+++ b/app/Resources/views/desktop/courses/course_mobile_game.html.twig
@@ -89,6 +89,6 @@
 
             </div>
         </div>
-        {% include ':desktop:_contactHome.html.twig' with { 'form' : form } %}
+        {% include ':desktop:_contactHome.html.twig' with { 'form' : form, "course" : 1 } %}
     </div>
 {% endblock %}
