--- a/app/Resources/views/desktop/index.html.twig
+++ b/app/Resources/views/desktop/index.html.twig
@@ -58,7 +58,7 @@
                         <li><a href="{{ path('courseOfComic') }}">- curso de<br>
                                 c&oacute;mic</a></li>
                         <li><a href="{{ path('courseIlustrationDigitalTraditional') }}"><img src="{{ asset('sboza2/img/icons/icon-list.svg') }}"> - curso superior de<br>
-                                ilustraci&oacute;n tradicional y digital</a></li>
+                                ilustraci&oacute;n  editorial y digital</a></li>
                     </ul>
                 </div>
                 <div class="fourth_column">
@@ -72,13 +72,13 @@
                                 infoarquitectura 3D e interiores</a></li>
                         <li><a href="{{ path('grade3dFilm') }}"> - grado profesional en<br>
                                 cine de animaci&oacute;n 3D, videojuegos e ilustraci&oacute;n</a></li>
-                        <li><a href="{{ path('masterConceptGrafismo') }}"> - Masterd en<br>
+                        <li><a href="{{ path('masterConceptGrafismo') }}"> - Master en<br>
                                 concept y grafismo para videojuegos con Zbrush</a></li>
                         <li><a href="{{ path('courseMobileGame') }}"> - curso de<br>
                                 videojuegos para dispositivos m&oacute;viles</a></li>
                     </ul>
                 </div>
-                <p><img src="{{ asset('sboza2/img/icons/icon-list.svg') }}"> CURSOS EN PROCESO DE HOLOGACI&Oacute;N</p>
+                <p><img src="{{ asset('sboza2/img/icons/icon-list.svg') }}"> CURSOS EN PROCESO DE HOMOLOGACI&Oacute;N</p>
             </div>
         </div>
         <div class="wrapper-content">
