--- a/app/Resources/views/desktop/courses/course_ilustration_digital_traditional.html.twig
+++ b/app/Resources/views/desktop/courses/course_ilustration_digital_traditional.html.twig
@@ -6,24 +6,24 @@
             <div class="slide_show">
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider1">
-                        <li><img src="{{ asset('sboza2/img/course/course-ilustration-digital-traditional/img1.png') }}" alt="Curso superior de ilustración tradicional y digital" title="Curso superior de ilustración tradicional y digital"/></li>
-                        <li><img src="{{ asset('sboza2/img/course/course-ilustration-digital-traditional/img4.png') }}" alt="Curso superior de ilustración tradicional y digital" title="Curso superior de ilustración tradicional y digital"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-ilustration-digital-traditional/img1.png') }}" alt="Curso superior de ilustración editorial y digital" title="Curso superior de ilustración editorial y digital"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-ilustration-digital-traditional/img4.png') }}" alt="Curso superior de ilustración editorial y digital" title="Curso superior de ilustración editorial y digital"/></li>
                     </ul>
                 </div>
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider2">
-                        <li><img src="{{ asset('sboza2/img/course/course-ilustration-digital-traditional/img2.png') }}" alt="Curso superior de ilustración tradicional y digital" title="Curso superior de ilustración tradicional y digital"/></li>
-                        <li><img src="{{ asset('sboza2/img/course/course-ilustration-digital-traditional/img3.png') }}" alt="Curso superior de ilustración tradicional y digital" title="Curso superior de ilustración tradicional y digital"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-ilustration-digital-traditional/img2.png') }}" alt="Curso superior de ilustración editorial y digital" title="Curso superior de ilustración editorial y digital"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-ilustration-digital-traditional/img3.png') }}" alt="Curso superior de ilustración editorial y digital" title="Curso superior de ilustración editorial y digital"/></li>
                     </ul>
                 </div>
             </div>
             <div class="slide_show_one_column">
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider1">
-                        <li><img src="{{ asset('sboza2/img/course/course-ilustration-digital-traditional/img1.png') }}" alt="Curso superior de ilustración tradicional y digital" title="Curso superior de ilustración tradicional y digital"/></li>
-                        <li><img src="{{ asset('sboza2/img/course/course-ilustration-digital-traditional/img4.png') }}" alt="Curso superior de ilustración tradicional y digital" title="Curso superior de ilustración tradicional y digital"/></li>
-                        <li><img src="{{ asset('sboza2/img/course/course-ilustration-digital-traditional/img2.png') }}" alt="Curso superior de ilustración tradicional y digital" title="Curso superior de ilustración tradicional y digital"/></li>
-                        <li><img src="{{ asset('sboza2/img/course/course-ilustration-digital-traditional/img3.png') }}" alt="Curso superior de ilustración tradicional y digital" title="Curso superior de ilustración tradicional y digital"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-ilustration-digital-traditional/img1.png') }}" alt="Curso superior de ilustración editorial y digital" title="Curso superior de ilustración editorial y digital"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-ilustration-digital-traditional/img4.png') }}" alt="Curso superior de ilustración editorial y digital" title="Curso superior de ilustración editorial y digital"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-ilustration-digital-traditional/img2.png') }}" alt="Curso superior de ilustración editorial y digital" title="Curso superior de ilustración editorial y digital"/></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-ilustration-digital-traditional/img3.png') }}" alt="Curso superior de ilustración editorial y digital" title="Curso superior de ilustración editorial y digital"/></li>
                     </ul>
                 </div>
             </div>
@@ -38,7 +38,7 @@
                         curso superior de
                     </p>
                     <p class="green">
-                        ilustraci&oacute;n tradicional y<br>digital
+                        ilustraci&oacute;n<br> editorial y<br>digital
                     </p>
                 </div>
                 <div class="second_column">
@@ -63,17 +63,17 @@
                     <p class="text">
                         En sboza2 formamos profesionales, para ello disponemos del plan de estudios mejor adaptado a las demandas del mercado profesional de la Ilustraci&oacute;n. Enfocado a todos aquellos apasionados de la creatividad, el dibujo y el color que quieran dedicarse profesionalmente a ello.
                         <br><br>
-                        Aprende a dominar las t&eacute;cnicas del dibujo, y los diferentes campos de la Ilustraci&oacute;n relacion&aacute;ndolas con las ultimas tecnolog&iacute;as en tratamientos del color tradicional y digital.
+                        Aprende a dominar las t&eacute;cnicas del dibujo, y los diferentes campos de la Ilustraci&oacute;n relacion&aacute;ndolas con las ultimas tecnolog&iacute;as en tratamientos del color editorial y digital.
                     </p>
                 </div>
-                <a href="{{ asset('sboza2/docs/13-CURSO-SUPERIOR-DE-ILUSTRACION-TRADICIONAL-Y-DIGITAL.pdf') }}" target="_blank"><img src="{{ asset('sboza2/img/course/btn-download-01.png') }}" alt="Curso superior de ilustración tradicional y digital" title="Curso superior de ilustración tradicional y digital"></a>
+                <a href="{{ asset('sboza2/docs/13-CURSO-SUPERIOR-DE-ILUSTRACION-TRADICIONAL-Y-DIGITAL.pdf') }}" target="_blank"><img src="{{ asset('sboza2/img/course/btn-download-01.png') }}" alt="Curso superior de ilustración editorial y digital" title="Curso superior de ilustración editorial y digital"></a>
             </div>
         </div>
         <div class="footer_content_courser">
             <div class="wrapper-content-course">
                 <div class="content-text">
                     <div class="icon">
-                        <img src ="{{ asset('sboza2/img/course/course-ilustration-digital-traditional/icon-course.svg') }}" alt="Curso superior de ilustración tradicional y digital" title="Curso superior de ilustración tradicional y digital"/>
+                        <img src ="{{ asset('sboza2/img/course/course-ilustration-digital-traditional/icon-course.svg') }}" alt="Curso superior de ilustración editorial y digital" title="Curso superior de ilustración editorial y digital"/>
                     </div>
                     <p class="title">
                         DATOS DE INTER&Eacute;S
@@ -100,6 +100,6 @@
 
             </div>
         </div>
-        {% include ':desktop:_contactHome.html.twig' with { 'form' : form } %}
+        {% include ':desktop:_contactHome.html.twig' with { 'form' : form, "course" : 1 } %}
     </div>
 {% endblock %}
