--- a/app/Resources/views/desktop/courses/course_web_programmer.html.twig
+++ b/app/Resources/views/desktop/courses/course_web_programmer.html.twig
@@ -37,7 +37,7 @@
                         curso superior de
                     </p>
                     <p class="pink">
-                        Programac&oacute;n y<br>
+                        Programaci&oacute;n y<br>
                         desarrollo de<br>
                         aplicaciones web<br>
                     </p>
@@ -87,6 +87,6 @@
 
             </div>
         </div>
-        {% include ':desktop:_contactHome.html.twig' with { 'form' : form } %}
+        {% include ':desktop:_contactHome.html.twig' with { 'form' : form, "course" : 1 } %}
     </div>
 {% endblock %}
