--- a/app/Resources/views/desktop/courses/superior_photography.twig
+++ b/app/Resources/views/desktop/courses/superior_photography.twig
@@ -90,6 +90,6 @@
 
             </div>
         </div>
-        {% include ':desktop:_contactHome.html.twig' with { 'form' : form } %}
+        {% include ':desktop:_contactHome.html.twig' with { 'form' : form, "course" : 1 } %}
     </div>
 {% endblock %}
