add course fx and photografy

--- a/app/Resources/views/desktop/courses/porfolio_creation.html.twig
+++ b/app/Resources/views/desktop/courses/porfolio_creation.html.twig
@@ -50,9 +50,10 @@
                         &iquest; PARA QUE TE PREPARA SBOZA2 ?
                     </p>
                     <p class="text">
-                        Nuestra finalidad en el curso es realizar un portfolio personal a traves de la obtenci&oacute;n de Artes Finales de alta calidad, cuyos trabajos tendran un acabo profesional y competitivo, imprescindible para acceder al mercado laboral. El portfolio es para los profesionales la herramienta de presentaci&oacute;n que les permite competir con &eacute;xito, demostrando a sus futuros clientes la calidad de sus trabajos y la amplitud de sus conocimientos. El asesoramiento profesional de temas legales, as&iacute; como t&eacute;cnicas de entrevista son fundametales para obtener buenos resultados.
+                        Nuestra finalidad en el curso es realizar un portfolio personal a trav&eacute;s de la obtenci&oacute;n de Artes Finales de alta calidad, cuyos trabajos tendr&aacute;n un acabo profesional y competitivo, imprescindible para acceder al mercado laboral. El portfolio es para los profesionales la herramienta de presentaci&oacute;n que les permite competir con &eacute;xito, demostrando a sus futuros clientes la calidad de sus trabajos y la amplitud de sus conocimientos. El asesoramiento profesional de temas legales, as&iacute; como t&eacute;cnicas de entrevista son fundamentales para obtener buenos resultados.
                         <br><br>
-                        No podemos olvidar que en numerosas ocasiones la diferencia entre conseguir un buen trabajo o no, la marca la calidad del portfolio que se presenta, y c&oacute;mo lo presentemos.                    </p>
+                        No podemos olvidar que en numerosas ocasiones la diferencia entre conseguir un buen trabajo o no, la marca la calidad del portfolio que se presenta, y c&oacute;mo lo presentemos.
+                    </p>
                 </div>
                 <a href="{{ asset('sboza2/docs/10-MASTER-EN-CREACION-DE-PORTFOLIO.pdf') }}"> <img src="{{ asset('sboza2/img/course/btn-download-02.png') }}" alt="Master creacion de porfolio" title="Master creacion de porfolio"></a>
             </div>
@@ -79,7 +80,7 @@
                         M&aacute;s de 600 horas de pr&aacute;cticas libres.</strong><br>
                         (Las horas de practicas libres corresponden al uso de las instalaciones, que el alumno podr&aacute; utilizar con total libertad sin ning&uacute;n tipo de coste adicional para la realizaci&oacute;n de sus proyectos)<br><br>
 
-                        <strong>Grupos de ma&ntilde;ana y tarde.<br>
+                        <strong>Grupos de tardes.<br>
                         Todo el material que el alumno precisa para la realizaci&oacute;n del curso corre por cuenta de la escuela.</strong><br><br>
                     </p>
                 </div>
