--- a/app/Resources/views/desktop/courses/superior_photography.html.twig
+++ b/app/Resources/views/desktop/courses/superior_photography.html.twig
@@ -6,24 +6,24 @@
             <div class="slide_show">
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider1">
-                        <li><img src="{{ asset('sboza2/img/course/fx/img1.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/fx/img3.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/fotografia/img1.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/fotografia/img3.png') }}" /></li>
                     </ul>
                 </div>
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider2">
-                        <li><img src="{{ asset('sboza2/img/course/fx/img2.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/fx/img4.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/fotografia/img2.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/fotografia/img4.png') }}" /></li>
                     </ul>
                 </div>
             </div>
             <div class="slide_show_one_column">
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider1">
-                        <li><img src="{{ asset('sboza2/img/course/fx/img1.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/fx/img3.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/fx/img2.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/fx/img4.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/fotografia/img1.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/fotografia/img3.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/fotografia/img2.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/fotografia/img4.png') }}" /></li>
                     </ul>
                 </div>
             </div>
@@ -35,11 +35,11 @@
                 </p>
                 <div class="first_column">
                     <p>
-                        curso de
+                        curso superior de
                     </p>
                     <p class="pink">
-                        Caracterización y<br>
-                        Fx
+                        Fotografia<br>
+                        profesional
                     </p>
                 </div>
             </div>
@@ -48,22 +48,22 @@
             <div class="wrapper-content-course">
                 <div class="content-text">
                     <p class="title">
-                        &iquest; PARA QUE TE PREPARA SBOZA2 ?
+                        ¿ PARA QUE TE PREPARA SBOZA2 ?
                     </p>
                     <p class="text">
-                        Nuestro curso de caracterización y fx está pensado para convertirte en un profesional de la caracterización con grandes conocimientos de efectos especiales.
+                        La profesi&oacute;n de fot&oacute;grafo no s&oacute;lo tiene que ver con producir im&aacute;genes, sino tambi&eacute;n con conseguir la imagen adecuada en el momento preciso. Prensa, revistas y sitios web en todo el mundo est&aacute;n constantemente a la b&uacute;squeda de materiales nuevos e interesantes. Las oportunidades son enormes y siempre crecientes, por eso en Sboza2 te proporcionamos los conocimientos y las habilidades necesarias para iniciar una carrera como fot&oacute;grafo profesional o como aficionado de alto nivel. Un curso totalmente actualizado y muy completo, que abarca todos los aspectos de la fotograf&iacute;a.
                         <br><br>
-                        Sacaremos el mayor rendimiento de cada tipo de maquillaje, así aprenderás a definir y crear un personaje de principio a fin, fabricando elementos técnicos mediante modelado y maquillaje, cambiando temporalmente la forma del cabello con o sin postizos o pelucas y pudiendo ejercer la profesión en cine, teatro, televisión y publicidad.
+                        Al finalizar el Curso de Fotograf&iacute;a Profesional habr&aacute;s adquirido las habilidades y conocimientos necesarios para enfrentarte al entorno laboral con una formaci&oacute;n fotogr&aacute;fica muy completa que se ajusta a la demanda del mercado de trabajo actual, tener una actividad secundaria rentable o simplemente desarrollar un nuevo y apasionante hobby.
                     </p>
                 </div>
-                <a href="{{ asset('sboza2/docs/12-CURSO-DE-CARACTERIZACION-Y-FX-SBOZA2.pdf') }}" target="_blank"><img src="{{ asset('sboza2/img/course/btn-download-02.png') }}"></a>
+                <a href="{{ asset('sboza2/docs/CURSO-SUPERIOR-DE-FOTOGRAFIA-PROFESIONAL-SBOZA2.pdf') }}" target="_blank"> <img src="{{ asset('sboza2/img/course/btn-download-02.png') }}" alt="Curso de diseño gráfico y web" title="Curso de diseño gráfico y web"></a>
             </div>
         </div>
         <div class="footer_content_courser">
             <div class="wrapper-content-course">
                 <div class="content-text">
                     <div class="icon">
-                        <img src ="{{ asset('sboza2/img/course/fx/icon-course.svg') }}"/>
+                        <img src ="{{ asset('sboza2/img/course/fotografia/icon-course.svg') }}"/>
                     </div>
                     <p class="title">
                         DATOS DE INTER&Eacute;S
@@ -72,7 +72,7 @@
                         <strong>Duraci&oacute;n del curso:</strong> Un a&ntilde;o, plazas limitadas<br>
                         <strong>Curso acad&eacute;mico:</strong> De octubre a julio<br>
                         <strong>Diplomatura:</strong> Privada<br>
-                        <strong>Titulaci&oacute;n:</strong> Curso de Caracterización y FX<br><br>
+                        <strong>Titulaci&oacute;n:</strong> Curso superior de fotograf&iacute;a profesional<br><br>
 
                         <strong>Curso totalmente pr&aacute;ctico.<br>
                         3 d&iacute;as a la semana, 3 horas diarias.<br>
@@ -80,13 +80,13 @@
                         M&aacute;s de 200 horas de pr&aacute;cticas libres.</strong><br>
                         (Las horas de practicas libres corresponden al uso de las instalaciones, que el alumno podr&aacute; utilizar con total libertad sin ning&uacute;n tipo de coste adicional para la realizaci&oacute;n de sus proyectos)<br><br>
 
-                        <strong>Grupos de ma&ntilde;ana y tarde.<br>
+                        <strong>Grupos de tardes.<br>
                         Todo el material que el alumno precisa para la realizaci&oacute;n del curso corre por cuenta de la escuela.</strong><br><br>
                     </p>
                 </div>
 
             </div>
         </div>
-        {% include ':desktop:_contactHome.html.twig' with { 'form' : form, "course" : 1} %}
+        {% include ':desktop:_contactHome.html.twig' with { 'form' : form, "course" : 1 } %}
     </div>
 {% endblock %}
