--- a/app/Resources/views/desktop/index.html.twig
+++ b/app/Resources/views/desktop/index.html.twig
@@ -40,11 +40,11 @@
                                 Programaci&oacute;n y desarrollo de aplicaciones web</a></li>
                         <li><a href="{{ path('porfolioCreation') }}">- Master en<br>
                             creaci&oacute;n de Porfolio</a></li>
-                        <li><a href="">- curso de<br>
+                        <li><a href="{{ path('courseCharacterizationFx') }}">- curso de<br>
                                 Caracterizaci&oacute;n y Fx</a></li>
                         <li><a href="">- curso de<br>
                                 Dibujo para tatuadores</a></li>
-                        <li><a href="">- curso superior de<br>
+                        <li><a href="{{ path('superiorPhotografic') }}">- curso superior de<br>
                             Fotografia profesional</a></li>
                     </ul>
                 </div>
