courses fx and photografy changed.

--- a/app/Resources/views/desktop/courses/course_characterization_fx.html.twig
+++ b/app/Resources/views/desktop/courses/course_characterization_fx.html.twig
@@ -76,11 +76,11 @@
 
                         <strong>Curso totalmente pr&aacute;ctico.<br>
                         3 d&iacute;as a la semana, 3 horas diarias.<br>
-                        360 horas lectivas anuales.<br>
+                        360 horas lectivas.<br>
                         M&aacute;s de 200 horas de pr&aacute;cticas libres.</strong><br>
                         (Las horas de practicas libres corresponden al uso de las instalaciones, que el alumno podr&aacute; utilizar con total libertad sin ning&uacute;n tipo de coste adicional para la realizaci&oacute;n de sus proyectos)<br><br>
 
-                        <strong>Grupos de ma&ntilde;ana y tarde.<br>
+                        <strong>Grupos de tardes.<br>
                         Todo el material que el alumno precisa para la realizaci&oacute;n del curso corre por cuenta de la escuela.</strong><br><br>
                     </p>
                 </div>
