--- a/app/Resources/views/desktop/courses/superior_photography.html.twig
+++ b/app/Resources/views/desktop/courses/superior_photography.html.twig
@@ -75,9 +75,9 @@
                         <strong>Titulaci&oacute;n:</strong> Curso superior de fotograf&iacute;a profesional<br><br>
 
                         <strong>Curso totalmente pr&aacute;ctico.<br>
-                        3 d&iacute;as a la semana, 3 horas diarias.<br>
-                        360 horas lectivas anuales.<br>
-                        M&aacute;s de 200 horas de pr&aacute;cticas libres.</strong><br>
+                        2 d&iacute;as a la semana, 3 horas diarias.<br>
+                        240 horas lectivas.<br>
+                        M&aacute;s de 150 horas de pr&aacute;cticas libres.</strong><br>
                         (Las horas de practicas libres corresponden al uso de las instalaciones, que el alumno podr&aacute; utilizar con total libertad sin ning&uacute;n tipo de coste adicional para la realizaci&oacute;n de sus proyectos)<br><br>
 
                         <strong>Grupos de tardes.<br>
