--- a/app/Resources/views/desktop/courses/course_graphic_design_and_web.html.twig
+++ b/app/Resources/views/desktop/courses/course_graphic_design_and_web.html.twig
@@ -56,7 +56,7 @@
                         Durante el curso los alumnos contaran con profesionales que les orientaran sobre las tendencias actuales y les ense&ntilde;aran los programas mas demandados del panorama laboral, de este modo estar&aacute;n totalmente preparados para diferentes puesto de trabajo dentro de la rama del dise&ntilde;o gr&aacute;fico.
                     </p>
                 </div>
-                <a href="{{ asset('sboza2/docs/01-CURSO-DISEÑO-GRAFICO-Y-WEB-SBOZA2.pdf') }}" target="_blank"> <img src="{{ asset('sboza2/img/course/btn-download-02.png') }}" alt="Curso de diseño gráfico y web" title="Curso de diseño gráfico y web"></a>
+                <a href="{{ asset('sboza2/docs/01-CURSO-DISENIO-GRAFICO-Y-WEB-SBOZA2.pdf') }}" target="_blank"> <img src="{{ asset('sboza2/img/course/btn-download-02.png') }}" alt="Curso de diseño gráfico y web" title="Curso de diseño gráfico y web"></a>
             </div>
         </div>
         <div class="footer_content_courser">
