--- a/app/Resources/views/desktop/courses/superior_graphic_design.html.twig
+++ b/app/Resources/views/desktop/courses/superior_graphic_design.html.twig
@@ -68,7 +68,7 @@
                         Una vez finalizado el curso los conocimientos aprendidos te convertir&aacute;n en un profesional todoterreno capaz de dar soluciones a los proyectos planteados, llegando a estar totalmente capacitado para liderar un equipo creativo.
                     </p>
                 </div>
-                <a href="{{ asset('sboza2/docs/03-CURSO-SUPERIOR-DE-DISEÑO-GRAFICO SBOZA2.pdf') }}" target="_blank"> <img src="{{ asset('sboza2/img/course/btn-download-01.png') }}" alt="Curso superior de diseño gráfico" title="Curso superior de diseño gráfico"></a>
+                <a href="{{ asset('sboza2/docs/03-CURSO-SUPERIOR-DE-DISENIO-GRAFICO-SBOZA2.pdf') }}" target="_blank"> <img src="{{ asset('sboza2/img/course/btn-download-01.png') }}" alt="Curso superior de diseño gráfico" title="Curso superior de diseño gráfico"></a>
             </div>
         </div>
         <div class="footer_content_courser">
