--- a/app/Resources/views/desktop/courses/superior_photography.html.twig
+++ b/app/Resources/views/desktop/courses/superior_photography.html.twig
@@ -38,7 +38,7 @@
                         curso superior de
                     </p>
                     <p class="pink">
-                        Fotografia<br>
+                        Fotograf&iacute;a<br>
                         profesional
                     </p>
                 </div>
