created admin zone

--- a/app/Resources/views/admin/admin.html.twig
+++ b/app/Resources/views/admin/admin.html.twig
@@ -1,5 +1,9 @@
 {% extends 'base_admin.html.twig' %}
 
 {% block content %}
-    {{ "hola" }}
+    <section class="container-fluid">
+        <div class="col-lg-8 col-md-8 col-sm-12">
+
+        </div>
+    </section>
 {% endblock %}
