--- a/app/Resources/views/base_admin.html.twig
+++ b/app/Resources/views/base_admin.html.twig
@@ -10,11 +10,14 @@
     {% block stylesheets %}{% endblock %}
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     <link href="{{ asset('sboza2/css/font-awesome.min.css') }}" rel="stylesheet" />
+    <link href="{{ asset('sboza2/css/normalize.min.css') }}" rel="stylesheet" />
+    <link href="{{ asset('sboza2/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet" />
     <script src="{{ asset('sboza2/js/jquery-3.1.0.min.js') }}"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 </head>
 <body>
 {% block header %}
+    {% include 'admin/_header.html.twig' %}
 {% endblock %}
 {% block content %}{% endblock %}
 {% block footer %}
