--- a/app/Resources/views/admin/_header.html.twig
+++ b/app/Resources/views/admin/_header.html.twig
@@ -13,7 +13,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="{{ path('admin') }}">Home</a></li>
                 <li><a href="{{ path('adminPages') }}">Páginas</a></li>
-                <li><a href="#">Entradas</a></li>
+                <li><a href="{{ path('adminNews') }}">Entradas</a></li>
             </ul>
         </nav>
     </div>
