--- a/app/Resources/views/admin/view_news.html.twig
+++ b/app/Resources/views/admin/view_news.html.twig
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="container">
         <div class="row">
-            {{ form_start(form ,{'action':'', 'method':'POST', 'name':'form_page'}) }}
+            {{ form_start(form ,{'action':'', 'method':'POST'}) }}
             {{ form_widget(form) }}
             {{ form_end(form) }}
         </div>
